Update README file

--- a/README
+++ b/README
@@ -24,7 +24,7 @@ Also need to compile android_core from here:
 https://github.com/rosjava/android_core/tree/indigo
 
 Once your environment is set, do the following steps:
- 1) git clone the repo in the android_core folder (the same folder where tutorials are).
+ 1) git clone the repo in the android_core folder (the same folder where rosjava are ~/rosjava).
  2) Edit the settings.gradle file in the android_core folder, adding 'android_sensors_driver' at the end of the include list.
  3) cd ~/rosjava; catkin_make
 
