Update README file

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Authors:
- no email             (Tal Revev)
+ no email             (Tal Regev)
  chadrockey@gmail.com (Chad Rockey)
  axelfurlan@gmail.com (Axel Furlan)
 
