--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">ROS Sensors Driver</string>
     <string name="help_title">About Android Sensors Driver</string>
-    <string name="help_message">Android Sensors Driver is an open source project!  For more information, go to the \'Wiki\'.  To report bugs or request features click \'Report\'.</string>
+    <string name="help_message">Android Sensors Driver is an open source project!  To report bugs or request features click \'Report\'.</string>
     <string name="help_ok">OK</string>
     <string name="help_report">Report</string>
     <string name="help_wiki">Wiki</string>
